[package]
name = "tokio-jsonrpc-derive"
version = "0.8.0"
authors = [
    "Michal 'vorner' Vaner <vorner@vorner.cz>",
    "Ignacio Corderi <icorderi@msn.com>"]
description = "Macros 1.1 implementation of #[derive(Params)]"
documentation = "https://docs.rs/tokio-jsonrpc"
repository = "https://github.com/vorner/tokio-jsonrpc"
readme = "README.md"
keywords = ["tokio", "json", "jsonrpc"]
categories = ["asynchronous", "network-programming"]
license = "Apache-2.0/MIT"

[badges]
travis-ci = { repository = "vorner/tokio-jsonrpc" }
appveyor = { repository = "vorner/tokio-jsonrpc" }

[lib]
proc-macro = true

[dependencies]
quote = "0.3"
syn = "0.11"
